# aoc2025

./: .gitignore  mkday  pyproject.toml  run  run_go
days/day1/: part1.py  part2.py
days/day2/: part1.py  part2.py
days/day3/: day3lib.py  part1.py  part2.py
days/day4/: part1.py  part2.py
days/day5/: part1.py  part2.py
days/day6/: part1.py  part2.py
days/day7/: part1.py  part2.py
days/day8/: part1.py  part2.py
days/day9/: part1.py  part2.py
go_aoc2025/: go.mod
go_aoc2025/utils/: pt.go  utils.go
lib/: input.py  measure.py  path.py
